# fac-projects

./: .gitignore  IDEAS.md  README.md
eva/: .env.example  .gitignore  README.md  Tiltfile  default.env  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  traefik.yml
eva/auth-server/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml
eva/auth-server/src/: index.ts  passport.ts  routes.ts
eva/auth-server/src/middleware/: requireAuth.ts
eva/auth-server/src/routes/: index.ts
eva/auth-server/src/routes/github/: github.handlers.ts  github.router.ts
eva/auth-server/src/routes/livekit/: livekit.handlers.ts  livekit.router.ts
eva/embeddings/: .gitignore  chunks_export.json  diraization.ipynb  embed_vectorize.ipynb  main.py  pyproject.toml
eva/embeddings/output/: hacks-for-working-with-spreadsheets_audio.srt  hacks-for-working-with-spreadsheets_audio.transcript.json  hacks-for-working-with-spreadsheets_audio.transcript.txt
eva/ui/: .dockerignore  .env.exmaple  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
eva/ui/public/: site.webmanifest
eva/ui/src/: App.css  App.tsx  index.css  main.tsx  router.ts
eva/ui/src/apis/: index.ts
eva/ui/src/apis/api-video/: api-video.ts
eva/ui/src/auth/: AuthContext.tsx  authApi.ts  useAuth.ts
eva/ui/src/components/elements/: index.ts
eva/ui/src/components/elements/Card/: Card.css  Card.tsx
eva/ui/src/components/icons/: ChevronLeftIcon.tsx  ChevronRightIcon.tsx  EnterFullscreenIcon.tsx  ExitFullscreenIcon.tsx  GitHubIcon.tsx  MicIcon.tsx  PauseIcon.tsx  PlayIcon.tsx  SeekBackIcon.tsx  SeekForwardIcon.tsx  VolumeIcon.tsx  VolumeOffIcon.tsx  icon.types.ts  iconSizes.ts  index.ts
eva/ui/src/components/layout/: AppLayout.css  AppLayout.tsx  AppNav.css  AppNav.tsx  PageLayout.css  PageLayout.tsx
eva/ui/src/configs/: constants.ts  env.ts  index.ts
eva/ui/src/pages/: index.ts
eva/ui/src/pages/Event/: Event.css  Event.tsx
eva/ui/src/pages/EventGallery/: EventGallery.css  EventGallery.tsx
eva/ui/src/pages/Home/: Home.css  Home.tsx
eva/ui/src/pages/NotFound/: NotFound.css  NotFound.tsx
eva/ui/src/pages/Unauthorised/: Unauthorised.css  Unauthorised.tsx
eva/ui/src/providers/: index.ts
eva/ui/src/providers/agent/: agent.provider.tsx
eva/ui/src/providers/auth/: auth.constants.ts  auth.provider.tsx  auth.types.ts  use-auth.hook.ts
eva/voice-agent/: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  pyproject.toml
eva/web-ui/: .env.example  auth.ts  package.json  pnpm-lock.yaml
eva/web-ui/app/: page.tsx
eva/web-ui/app/(app)/: layout.tsx
eva/web-ui/app/events/: page.tsx
eva/web-ui/app/unauthorised/: page.tsx
eva/web-ui/components/app/: nav-bar.tsx
eva/web-ui/components/video/: event-voice-experience.tsx  moments-panel.tsx  player.tsx
eva/web-ui/lib/: api-video.ts
eva/web-ui/types/: page-props.ts
rag/: .dockerignore  .env.example  .gitignore  DAGSTER_VS_AIRFLOW.md  Makefile  PREFECT_vs_AIRFLOW.md  README.md  architecture.md  dagster.yaml  docker-compose.prod.yaml  docker-compose.yaml  eval.py  main.py  pyproject.toml  query.py  seed_queries.py
rag/.tmp_dagster_home_rvjtgtw9/storage/d3740a46-a7ad-4994-9497-f034575ebfcb/compute_logs/: xithknec.err  yjdcgbyh.err
rag/configs/: workspace.yaml
rag/db/: setup.py
rag/db/models/: __init__.py  chunks.py  documents.py  embeddings.py  eval_tracking.py  query_logs.py
rag/docker/api/: Dockerfile
rag/docker/dagster-code/: Dockerfile
rag/docs/: CHUNKING_EMBEDDING_STRATEGY.md
rag/flows/: arxiv_search.py  chunking.py  deploy.py  embedding.py  extraction.py
rag/grafana/provisioning/dashboards/: provider.yaml
rag/grafana/provisioning/datasources/: rag.yaml
rag/nginx/conf.d/: arxiv-rag.conf
rag/scripts/: deploy.sh  docker-entrypoint.sh  init-ssl.sh  setup_env.py
rag/services/api/: alembic.ini  pyproject.toml
rag/services/api/src/arxiv_rag/: README.md  main.py
rag/services/api/src/arxiv_rag/api/: middleware.py  rate_limit.py  server.py
rag/services/api/src/arxiv_rag/api/routes/: auth.py  generate.py  retrieve.py
rag/services/api/src/arxiv_rag/api/static/: index.html  login.html
rag/services/api/src/arxiv_rag/clients/: __init__.py  arxiv_client.py  embeddings_client.py  s3_client.py
rag/services/api/src/arxiv_rag/config/: settings.py
rag/services/api/src/arxiv_rag/database/: __init__.py  models.py  session.py
rag/services/api/src/arxiv_rag/database/migrations/: env.py
rag/services/api/src/arxiv_rag/database/migrations/versions/: 79d7c0279200_create_arxiv_chunks_table.py  b3a1c2d4e5f6_add_logs_table.py
rag/services/api/src/arxiv_rag/log/: _context.py  _formatter.py  _handler.py
rag/services/api/src/arxiv_rag/services/: __init__.py  chunking.py  embeddings.py  generation.py  reranking.py  retrieval.py
rag/services/api/src/arxiv_rag/utils/: __init__.py  display_utils.py  serialisation.py
rag/services/pipeline/: pyproject.toml
rag/services/pipeline/src/pipeline/: config.py  definitions.py
rag/services/pipeline/src/pipeline/defs/arxiv_ingestion/: assets.py  resources.py
rag/services/pipeline/src/pipeline/defs/chunking_embedding/: __init__.py  assets.py  resources.py
rag/services/pipeline/src/pipeline/lib/: chunker.py  db.py  embeddings_client.py  pdf_downloader.py  pdf_extractor.py
rag/src/arxiv_rag/api/: server.py
rag/src/arxiv_rag/api/routes/: auth.py  generate.py
rag/src/arxiv_rag/config/: settings.py
rag/src/arxiv_rag/database/: session.py
rag/src/arxiv_rag/database/migrations/: env.py
rag/src/arxiv_rag/docker/: Dockerfile  docker-compose.yml
rag/src/arxiv_rag/log/: __init__.py  _context.py  _handler.py  logging.py
rag/src/arxiv_rag/services/: chunking.py  embeddings.py  reranking.py  retrieval.py
rag/src/pipeline/: config.py  resources.py
rag/src/pipeline/defs/arxiv_ingestion/: __init__.py  assets.py
rag/src/pipeline/defs/extraction/: __init__.py  assets.py  resources.py
rag/src/pipeline/lib/: arxiv_client.py  db.py  pdf_extractor.py
rag/tests/: test_chunking.py
(+25 files in other folders)
