[project]
name = "rag"
version = "0.2.0"
description = "arXiv document ingestion, chunking, and embedding pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "arxiv>=2.4.1,<3.0.0",
  "dagster>=1.12,<2.0",
  "dagster-webserver>=1.12,<2.0",
  "dagster-postgres>=0.28,<1.0",
  "httpx>=0.28.1,<1.0.0",
  "psycopg2-binary>=2.9.11,<3.0.0",
  "pymupdf4llm>=1.27.2.2,<2.0.0",
  "sqlalchemy>=2.0.48,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline", "db"]

[tool.dagster]
module_name = "pipeline.definitions"
code_location_name = "pipeline"

[dependency-groups]
dev = [
    "poethepoet>=0.29.0,<1.0.0",
    "black==23.7.0",
    "mypy>=1.1.1,<2.0.0",
    "pytest==7.4.2",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "ruff>=0.4.6,<1.0.0",
    "ipython",
    "jupyterlab",
    "jupyterlab-vim",
]

# Poe the Poet (Scripting) #

## Dagster ##

[tool.poe.tasks.db-up]
cmd = "docker compose up postgres -d --wait"
help = "Start Postgres container"
envfile = ".env"

[tool.poe.tasks.db-setup]
cmd = "python -m db.setup"
help = "Create ingestion schema and tables in Postgres"
envfile = ".env"

[tool.poe.tasks.dagster]
sequence = [
  "db-up",
  "db-setup",
  {cmd = "dagster dev --port 3000 --verbose"}
]
help = "Start Postgres, ensure schema exists, and launch Dagster dev server"
envfile = ".env"

[tool.poe.tasks.server-up]
cmd = "docker compose up --build"
envfile = ".env"
help = "Start full Dagster stack (postgres, webserver, daemon, code server)"

[tool.poe.tasks.db-down]
cmd = "docker compose down postgres"
help = "Stop Postgres container"
envfile = ".env"

[tool.poe.tasks.server-down]
cmd = "docker compose down"
help = "Stop all services"
envfile = ".env"

[tool.poe.tasks.ingest]
cmd = "dagster job execute -m pipeline.definitions -j arxiv_ingestion_job"
help = "Run arXiv ingestion job once from CLI"
envfile = ".env"

[tool.poe.tasks.extract]
cmd = "dagster job execute -m pipeline.definitions -j extraction_job"
help = "Run extraction job once from CLI"
envfile = ".env"

## Code QA ##

[tool.poe.tasks.fmt]
cmd = "black --check src/ db/"
help = "Check code formatting with black (does not modify)"

[tool.poe.tasks.fmt-fix]
cmd = "black src/ db/"
help = "Fix code formatting issues automatically with black"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Check code linting with ruff (does not modify)"

[tool.poe.tasks.lint-fix]
cmd = "ruff check --fix ."
help = "Fix code linting issues automatically with ruff"

[tool.poe.tasks.fix]
sequence = ["fmt-fix", "lint-fix"]
help = "Fix all issues: formatting with black and linting with ruff"

[tool.poe.tasks.mypy]
cmd = "mypy src/ db/"
help = "Run type checking with mypy"

[tool.poe.tasks.test]
cmd = "pytest -v"
help = "Run tests with verbose output"

[tool.poe.tasks.check]
sequence = ["fmt", "lint", "mypy", "test"]
help = "Run all checks: formatting, linting, type checking, and tests"

## Dependency Configurations ##

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
lint.select = ["E", "F", "I"]
lint.ignore = ["E501", "E402"]
lint.unfixable = []
line-length = 89

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.pyright]
venvPath = "."
venv = ".venv"
