[project]
name = "rag"
version = "0.2.0"
description = "arXiv document ingestion, chunking, and embedding pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rag-db",
    "rag-pipeline",
    "rag-api",
]

[tool.uv.sources]
rag-db = { workspace = true }
rag-pipeline = { workspace = true }
rag-api = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
    "services/*",
]

[tool.dagster]
module_name = "pipeline.definitions"
code_location_name = "pipeline"

[dependency-groups]
dev = [
    "poethepoet>=0.44,<1.0",
    "black>=26.3,<27.0",
    "mypy>=1.20,<2.0",
    "pytest>=9.0,<10.0",
    "pytest-cov>=7.1,<8.0",
    "pytest-mock>=3.15,<4.0",
    "ruff>=0.15,<1.0",
    "ipython",
    "jupyterlab",
    "jupyterlab-vim",
]

# Poe the Poet (Scripting) #

[tool.poe]
envfile = ".env"

## Dagster ##

[tool.poe.tasks.dev]
shell = """
  trap 'echo "Stopping containers..."; docker compose down' EXIT
  docker compose up postgres pgweb -d --wait &&
  echo "pgweb: http://localhost:8081" &&
  python -m db.setup &&
  dagster dev --port 5000 --verbose
"""
envfile = ".env"
help = "Start Postgres + pgweb, ensure schema, launch Dagster dev server"

[tool.poe.tasks.ingest]
cmd = "dagster job execute -m pipeline.definitions -j arxiv_ingestion_job"
envfile = ".env"
help = "Run arXiv ingestion job once from CLI"

[tool.poe.tasks.extract]
cmd = "dagster job execute -m pipeline.definitions -j extraction_job"
envfile = ".env"
help = "Run extraction job once from CLI"

[tool.poe.tasks.chunk-embed]
cmd = "dagster job execute -m pipeline.definitions -j chunking_embedding_job"
envfile = ".env"
help = "Run chunking and embedding job once from CLI"

## API ##

[tool.poe.tasks.api]
cmd = """
  uvicorn arxiv_rag.api.server:app
    --reload
    --reload-dir services/api/src
    --reload-dir packages/db/src
    --port 8000
"""
envfile = ".env"
help = "Run the FastAPI RAG frontend service locally with auto-reload"

[tool.poe.tasks.migrate]
cmd = "alembic -c services/api/alembic.ini upgrade head"
envfile = ".env"
help = "Run database migrations"

## Docker ##

[tool.poe.tasks.up]
cmd = "docker compose up --build -d"
help = "Start Dagster stack (postgres, webserver, daemon, code server)"

[tool.poe.tasks.down]
cmd = "docker compose down"
help = "Stop all services"

[tool.poe.tasks.up-prod]
cmd = "docker compose -f docker-compose.yaml -f docker-compose.prod.yaml up --build -d"
help = "Start full production stack (dagster + API + nginx + certbot)"

[tool.poe.tasks.down-prod]
cmd = "docker compose -f docker-compose.yaml -f docker-compose.prod.yaml down"
help = "Stop full production stack"

[tool.poe.tasks.logs]
cmd = "docker compose logs -f"
help = "Tail logs from all services"

## Deploy ##

[tool.poe.tasks.deploy]
cmd = "./scripts/deploy.sh deploy"
help = "Deploy to remote: pull latest, rebuild & restart"

[tool.poe.tasks.tunnel]
shell = """
  if [ "${target}" = "dagster" ]; then
    echo "Dagster UI: http://localhost:5000"
    ssh -L 5000:127.0.0.1:5000 -i ${IDENTITY_FILE} ${DEPLOY_TARGET} -N

  elif [ "${target}" = "pgweb" ]; then
    echo "pgweb: http://localhost:8081"
    ssh -L 8081:127.0.0.1:8081 -i ${IDENTITY_FILE} ${DEPLOY_TARGET} -N

  elif [ "${target}" = "all" ]; then
    echo "Dagster UI: http://localhost:5000"
    echo "pgweb:      http://localhost:8081"
    ssh -L 5000:127.0.0.1:5000 -L 8081:127.0.0.1:8081 -i ${IDENTITY_FILE} ${DEPLOY_TARGET} -N

  else
    echo "Usage: uv run poe tunnel <dagster|pgweb|all>"
    exit 1
  fi
"""
envfile = ".env.deploy"
help = "SSH tunnel to remote services (dagster, pgweb, or all)"

[tool.poe.tasks.tunnel.args.target]
positional = true
default = "all"

## Code QA ##

[tool.poe.tasks.test]
cmd = "pytest -v"
help = "Run tests with verbose output"

[tool.poe.tasks.fmt]
cmd = "black --check packages/ services/ tests/"
help = "Check code formatting with black (does not modify)"

[tool.poe.tasks.fmt-fix]
cmd = "black packages/ services/ tests/"
help = "Fix code formatting issues automatically with black"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Check code linting with ruff (does not modify)"

[tool.poe.tasks.lint-fix]
cmd = "ruff check --fix ."
help = "Fix code linting issues automatically with ruff"

[tool.poe.tasks.fix]
sequence = ["fmt-fix", "lint-fix"]
help = "Fix all issues: formatting with black and linting with ruff"

[tool.poe.tasks.mypy]
cmd = "mypy packages/ services/"
help = "Run type checking with mypy"

[tool.poe.tasks.check]
sequence = ["fmt", "lint", "mypy", "test"]
help = "Run all checks: formatting, linting, type checking, and tests"

## Dependency Configurations ##

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
lint.select = ["E", "F", "I"]
lint.ignore = ["E501", "E402"]
lint.unfixable = []
line-length = 89

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.pyright]
venvPath = "."
venv = ".venv"
