[project]
name = "rag-api"
version = "0.2.0"
description = "FastAPI RAG API server — retrieval, reranking, and generation"
requires-python = ">=3.12"
dependencies = [
    "rag-db",
    "alembic>=1.13,<2.0",
    "anthropic>=0.30,<1.0",
    "boto3>=1.35,<2.0",
    "fastapi>=0.115,<1.0",
    "itsdangerous>=2.2,<3.0",
    "langchain-text-splitters>=0.3,<1.0",
    "openai>=1.50,<2.0",
    "pgvector>=0.3,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.5,<3.0",
    "requests>=2.32,<3.0",
    "sentence-transformers>=3.0,<4.0",
    "spacy>=3.8,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_rag"]

[tool.uv.sources]
rag-db = { workspace = true }
