[project]
name = "rag-api"
version = "0.2.0"
description = "FastAPI RAG API server — retrieval, reranking, and generation"
requires-python = ">=3.12"
dependencies = [
    "rag-db",
    "alembic>=1.18,<2.0",
    "anthropic>=0.93,<1.0",
    "boto3>=1.42,<2.0",
    "fastapi>=0.135,<1.0",
    "itsdangerous>=2.2,<3.0",
    "langchain-text-splitters>=1.1,<2.0",
    "openai>=2.31,<3.0",
    "pgvector>=0.4,<1.0",
    "psycopg[binary]>=3.3,<4.0",
    "pydantic-settings>=2.13,<3.0",
    "requests>=2.32,<3.0",
    "sentence-transformers>=5.4,<6.0",
    "spacy>=3.8,<4.0",
    "uvicorn[standard]>=0.44,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_rag"]

[tool.uv.sources]
rag-db = { workspace = true }
