[project]
name = "rag-pipeline"
version = "0.2.0"
description = "Dagster pipeline for arXiv ingestion and PDF extraction"
requires-python = ">=3.12"
dependencies = [
    "rag-db",
    "dagster>=1.13,<2.0",
    "dagster-webserver>=1.13,<2.0",
    "dagster-postgres>=0.29,<1.0",
    "arxiv>=2.4,<3.0",
    "httpx>=0.28,<1.0",
    "pymupdf4llm>=1.27,<2.0",
    "openai>=2.31,<3.0",
    "spacy>=3.8,<4.0",
    "langchain-text-splitters>=1.1,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.uv.sources]
rag-db = { workspace = true }

[tool.dagster]
module_name = "pipeline.definitions"
code_location_name = "pipeline"
